--- a/EDA-2-Olympics.ipynb
+++ b/EDA-2-Olympics.ipynb
@@ -566,7 +566,7 @@
    },
    "cell_type": "code",
    "source": [
-    "sns.histplot(data=df,x='Height',bins=25,kde=True,color='lightgreen')\n",
+    "sns.histplot(data=df,x='Height',bins=25,kde=True,color='Green')\n",
     "plt.title('Height distribution')\n",
     "plt.xlabel('Height')\n",
     "plt.ylabel('Frequency')"
@@ -614,7 +614,7 @@
    },
    "cell_type": "code",
    "source": [
-    "sns.histplot(data=df,x='Weight',bins=25,kde=True,color='lightpink')\n",
+    "sns.histplot(data=df,x='Weight',bins=25,kde=True,color='Pink')\n",
     "plt.title('Weight distribution')\n",
     "plt.xlabel('Weight')\n",
     "plt.ylabel('Frequency')"
